// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  style="grid-area: auto / auto / auto / auto;"
>
  Grid Item
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="my-extra-class"
  style="grid-area: auto / auto / auto / auto;"
>
  Grid Item
</div>
`;
